--- a/TBindex.html
+++ b/TBindex.html
@@ -138,7 +138,7 @@
         <section id="contact">
             <h2>Contact Me</h2>
             <p>Email: tusharbhoyar@example.com</p>
-            <p>LinkedIn: <a href="https://www.github.com/tusharbhoyar"
+            <p>LinkedIn: <a href="https://www.github.com/tusharBHO"
                     target="_blank">linkedin.com/in/tusharbhoyar</a></p>
         </section>
     </main>
